# TimesOil

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.serena/: project.yml
docs/: roadmap.md  история_проекта_полная.md  обзор_моделей_и_библиотек_2026-07.md  отчёт_прогноз_дебита_6мес.md  план_улучшений.md  хакатон_aios_бриф.html
scripts/: calibrate_crepes.py  calibrate_intervals.py  collect_results.py  eval_spdm.py  finetune_chronos.py  forecast_forward.py  forecast_forward_nf.py  make_figs.py  make_pdf.py  optimize_injection.py  prepare_spdm_data.py  run_baselines.py  run_chronos.py  run_crm.py  run_crm2p.py  run_crmp_pressure.py  run_ensemble.py  run_extended.py  run_fractional.py  run_lgbm.py  run_nf.py  run_stacking.py  run_tabpfn.py  run_tirex.py  run_unisim.py  run_volve.py  run_volve_uptime.py  spdm_run.sh  w3_copula.py  w3_hier_gentil.py  w3_ruptures_lgbm.py  wavelet_connectivity.py
src/timesoil/: allocation.py  backtest.py  baselines.py  chronos_runner.py  crm.py  crm2p.py  crmp_pressure.py  data.py  fractional.py  metrics.py  mlprep.py  tirex_runner.py  unisim.py  volve.py  wells.py
